# libdbi

./: .gitignore  .gitlab-ci.yml  AUTHORS  INSTALL  Makefile.am  NEWS  PLUGINS  README  README.drivers  README.osx  README.win32  TODO  UPGRADING  autogen.sh  balabit-vs-build  configure.in  dbi.pc.in
debian/: changelog  control  rules
doc/: Makefile.am  driver-guide.sgml  driver-guide.tmpl  example-program.sgml  libdbi-quickstart.sgml  libdbi-reference.sgml  libdbi-reference.tmpl  libdbi-transactions.sgml  libdbi-versioning.sgml  plugin_authors_guide.txt  programmers-guide.sgml  programmers_reference.txt
drivers/example/: dbd_example.c
drivers/mysql/: dbd_mysql.c  mysql-stuff.h
drivers/postgresql/: dbd_pgsql.c  pgsql-reserved.h  pgsql-stuff.h
drivers/template/: dbd_template.c  dbd_template.h
include/dbi/: Makefile.am  dbd.h  dbi-conn.h  dbi-dev.h  dbi-driver.h  dbi-result.h  dbi-type.h  dbi.h  dbi.h.in  dbi_type.h
pe-build/: .gitignore  build
pe-build/pkg-desc/: libdbi0-dev.files
sbuild/: config.yml
smake/: builder.py  configure_opts.py
src/: asprintf.c  dbd_helper.c  dbi_main.c  dbi_main.h  dbi_result.c  timegm.c
srelease/: platforms
tests/: test_dbi.c
tgz2build/: libdbi0.files  rules
